--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "my_work_file",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "gulpfile.js", 
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
