--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "\"SVG\"",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0"
   }
 }
