--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0"
+  },
+  "devDependencies": {
+    "del": "^7.0.0",
+    "gulp-dest-clean": "^0.5.0"
   }
 }
