--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "del": "^7.0.0",
-    "gulp-dest-clean": "^0.5.0"
+    "gulp-dest-clean": "^0.5.0",
+    "gulp-file-include": "^2.3.0"
   }
 }
