--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "del": "^7.0.0",
     "gulp-dest-clean": "^0.5.0",
     "gulp-file-include": "^2.3.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-replace": "^1.1.4",
     "gulp-version-number": "^0.2.4",
     "gulp-webp-html-nosvg": "^1.1.1"
