--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-cli": "^2.3.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.27.11",
     "del": "^7.0.0",
     "gulp-dest-clean": "^0.5.0",
     "gulp-file-include": "^2.3.0",
