--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp build --build",
+    "zip": "gulp deployZip --build",
     "svgSprive": "gulp svgSprive"
   },
   "author": "\"SVG\"",
@@ -39,6 +40,7 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-html-nosvg": "^1.1.1",
     "gulp-webpcss": "^1.1.1",
+    "gulp-zip": "^5.1.0",
     "sass": "^1.57.1",
     "swiper": "^8.4.5",
     "webp-converter": "^2.2.3",
