--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "gulp",
     "build": "gulp build --build",
     "zip": "gulp deployZip --build",
+    "deploy": "gulp deployFTP --build",
     "svgSprive": "gulp svgSprive"
   },
   "author": "\"SVG\"",
@@ -36,6 +37,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-svg-sprite": "^2.0.1",
     "gulp-ttf2woff2": "^4.0.1",
+    "gulp-util": "^3.0.8",
     "gulp-version-number": "^0.2.4",
     "gulp-webp": "^4.0.1",
     "gulp-webp-html-nosvg": "^1.1.1",
@@ -43,6 +45,7 @@
     "gulp-zip": "^5.1.0",
     "sass": "^1.57.1",
     "swiper": "^8.4.5",
+    "vinyl-ftp": "^0.6.1",
     "webp-converter": "^2.2.3",
     "webpack": "^5.75.0",
     "webpack-stream": "^7.0.0"
